--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
     tags: [v*]
   pull_request:
     branches: [master]
+    types: [closed]
 
 jobs:
   build-and-publish:
@@ -45,10 +46,13 @@ jobs:
         with:
           app_name: mailserver
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-          images:
-            - name: postfix
-              image:
-                registry_type: DOCKER_HUB
-                registry: pmphan
-                repository: postfix
-                tag: latest
+          images: '[
+            {
+              "name": "postfix",
+              "image": {
+                "registry_type": "DOCKER_HUB",
+                "registry": "pmphan",
+                "repository": "postfix",
+                "tag": "latest"
+            },
+          ]'
