--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,23 @@
-name: Build and Deploy
+name: Continuous Integration
 
 on:
   workflow_dispatch:
   push:
     branches: [master]
     tags: [v*]
-  pull_request:
-    branches: [master]
-    types: [closed]
 
 jobs:
   build-and-publish:
+    if: ${{ github.event_name == "push" }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Log into DockerHub
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract Docker meta
@@ -33,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: postfix
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -41,18 +38,24 @@ jobs:
     needs: build-and-publish
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to DigitalOcean
-        uses: digitalocean/app_action@v1.1.5
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: SCP docker-compose
+        uses: appleboy/scp-action@v0.1.10
         with:
-          app_name: mailserver
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-          images: '[
-            {
-              "name": "postfix",
-              "image": {
-                "registry_type": "DOCKER_HUB",
-                "registry": "pmphan",
-                "repository": "postfix",
-                "tag": "latest"
-            },
-          ]'
+          host: ${{ env.MAILSERVER_HOST }}
+          port: 22
+          username: ${{ secrets.MAILSERVER_USER }}
+          key: ${{ secrets.MAILSERVER_KEY }}
+          source: docker-compose.yml
+          target: /root/mailserver/
+
+      - name: Deploy
+        uses: appleboy/ssh-action
+        with:
+          host: ${{ env.MAILSERVER_HOST }}
+          port: 22
+          username: ${{ secrets.MAILSERVER_USER }}
+          key: ${{ secrets.MAILSERVER_KEY }}
+          script: cd /root/mailserver/ && docker-compose up -d
