--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 services:
   postfix:
-    build:
-      context: postfix
-    image: postfix:0.1.0
+    image: pmphan/postfix:latest
     healthcheck:
       test: ["CMD", "/usr/sbin/postfix", "status"]
     container_name: postfix
