--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   build-and-publish:
-    if: ${{ github.event_name == "push" }}
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -17,7 +17,7 @@ jobs:
       - name: Log into DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract Docker meta
@@ -36,15 +36,18 @@ jobs:
 
   deploy:
     needs: build-and-publish
+    if: |
+      always() &&
+      (needs.build-and-publish.result == 'success' || needs.build-and-publish.result == 'skipped') 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: SCP docker-compose
-        uses: appleboy/scp-action@v0.1.10
+        uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ env.MAILSERVER_HOST }}
+          host: ${{ vars.MAILSERVER_HOST }}
           port: 22
           username: ${{ secrets.MAILSERVER_USER }}
           key: ${{ secrets.MAILSERVER_KEY }}
@@ -52,9 +55,9 @@ jobs:
           target: /root/mailserver/
 
       - name: Deploy
-        uses: appleboy/ssh-action
+        uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ env.MAILSERVER_HOST }}
+          host: ${{ vars.MAILSERVER_HOST }}
           port: 22
           username: ${{ secrets.MAILSERVER_USER }}
           key: ${{ secrets.MAILSERVER_KEY }}
