[deploy] Update Github Actions for DKIM.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: pmphan/postfix
+          images: pmphan/mailserver-postfix
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -33,11 +33,39 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+  build-opendkim:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Log into DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: pmphan/mailserver-opendkim
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: opendkim
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
   deploy:
     needs: build-postfix
     if: |
       always() &&
-      (needs.build-postfix.result == 'success' || needs.build-postfix.result == 'skipped') 
+      (needs.build-postfix.result == 'success' || needs.build-postfix.result == 'skipped')  &&
+      (needs.build-opendkim.result == 'success' || needs.build-opendkim.result == 'skipped') 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
