--- a/opendkim/config/opendkim.conf
+++ b/opendkim/config/opendkim.conf
@@ -5,7 +5,7 @@ Syslog                  yes
 SyslogSuccess           yes
 RemoveOldSignatures     Yes
 
-Canonicalization        relaxed/simple
+Canonicalization        relaxed/relaxed
 
 Domain                  $mydomain
 Selector                $myselector
