--- a/opendkim/etcfs/opendkim/opendkim.conf
+++ b/opendkim/etcfs/opendkim/opendkim.conf
@@ -1,20 +1,22 @@
-AutoRestart             Yes
+AutoRestart             yes
 AutoRestartRate         10/1h
+
+LogResults              yes
 LogWhy                  yes
 Syslog                  yes
 SyslogSuccess           yes
-RemoveOldSignatures     Yes
+RemoveOldSignatures     yes
 
 Canonicalization        relaxed/relaxed
 
 Domain                  $mydomain
 Selector                $myselector
-KeyFile                 /run/secrets/key_file
+KeyFile                 /etc/dkim/keys/$myselector.private
 
-PidFile                 /var/run/opendkim/opendkim.pid
 SignatureAlgorithm      rsa-sha256
 
 UserID                  opendkim:opendkim
+UMask                   022
 Socket                  inet:8891@0.0.0.0
 
 ReportAddress           postmaster@$mydomain
