[opendkim] Sign from Docker host request.

--- a/opendkim/etcfs/opendkim/opendkim.conf
+++ b/opendkim/etcfs/opendkim/opendkim.conf
@@ -11,6 +11,9 @@ Canonicalization        relaxed/relaxed
 
 Domain                  $mydomain
 Selector                $myselector
+
+ExternalIgnoreList      refile:/etc/opendkim/TrustedHosts
+InternalHosts           refile:/etc/opendkim/TrustedHosts
 KeyFile                 /etc/dkim/keys/$myselector.private
 
 SignatureAlgorithm      rsa-sha256
