--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,6 +83,10 @@ jobs:
 
       - name: Deploy
         uses: appleboy/ssh-action@v0.1.10
+        env:
+          RELAY_HOST: ${{ vars.RELAY_HOST }}
+          RELAY_USERNAME: ${{ secrets.RELAY_USERNAME }}
+          RELAY_PASSWORD: ${{ secrets.RELAY_PASSWORD }}
         with:
           host: ${{ vars.MAILSERVER_HOST }}
           port: 22
