--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.3'
 
 services:
   postfix:
+    build:
+      context: postfix
     image: pmphan/mailserver-postfix:latest
     container_name: postfix
     hostname: ${HOSTNAME:-mail.phuongmphan.com}
@@ -13,12 +15,17 @@ services:
       - key_file
     environment:
       MASTER_USER: ${MASTER_USER:-contact}
-      MASTER_PASS: ${MASTER_PASS:-secrets}
+      MASTER_PASS: ${MASTER_PASS}
       VIRTUAL_USER: ${VIRTUAL_USER:-contact@phuongmphan.com}
       DEBUG_PEER_LIST: ${DEBUG_PEER_LIST:-}
+      RELAY_HOST: ${RELAY_HOST:-}
+      RELAY_USERNAME: ${RELAY_USERNAME:-}
+      RELAY_PASSWORD: ${RELAY_PASSWORD:-}
     restart: unless-stopped
 
   opendkim:
+    build:
+      context: opendkim
     image: pmphan/mailserver-opendkim:latest
     container_name: opendkim
     volumes:
