[postfix] Migrate storing virtual user db to postgres.

--- a/postfix/Dockerfile
+++ b/postfix/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.18.2
 
 EXPOSE 25 587
 
-RUN apk add --no-cache bash postfix cyrus-sasl cyrus-sasl-crammd5 cyrus-sasl-digestmd5 cyrus-sasl-login cyrus-sasl-ntlm
+RUN apk add --no-cache bash postfix postfix-pgsql cyrus-sasl cyrus-sasl-crammd5 cyrus-sasl-digestmd5 cyrus-sasl-login cyrus-sasl-ntlm
 
 ADD etcfs /etc
 
