--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,33 +7,34 @@ services:
     volumes:
       - postgresdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: ${DB_NAME:-postfix}
-      POSTGRES_USER: ${DB_USER:-postfix}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-posfix}
+      POSTGRES_DB: postfix
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     restart: unless-stopped
 
   postfix:
     image: pmphan/mailserver-postfix:latest
     container_name: postfix
-    hostname: ${HOSTNAME:-mail.phuongmphan.com}
+    hostname: ${HOSTNAME}
     ports:
       - "25:25"
-      - "587:587"
     secrets:
       - cert_file
       - key_file
     environment:
-      DEBUG_PEER_LIST: ${DEBUG_PEER_LIST:-}
-      RELAY_HOST: ${RELAY_HOST:-}
-      RELAY_USERNAME: ${RELAY_USERNAME:-}
-      RELAY_PASSWORD: ${RELAY_PASSWORD:-}
+      POSTGRES_DB: postfix
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      RELAY_HOST: ${RELAY_HOST}
+      RELAY_USER: ${RELAY_USER}
+      RELAY_PASSWORD: ${RELAY_PASSWORD}
     restart: unless-stopped
 
   postfixadmin:
     image: postfixadmin:3.3
     container_name: postfixadmin
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./postfixadmin/config.local.php:/var/www/html/config.local.php
       - ./postfixadmin/apache2.conf:/etc/apache2/apache2.conf
@@ -41,10 +42,10 @@ services:
       HOSTNAME: ${HOSTNAME}
       POSTFIXADMIN_DB_TYPE: pgsql
       POSTFIXADMIN_DB_HOST: postgres
-      POSTFIXADMIN_DB_USER: ${DB_USER:-postfix}
-      POSTFIXADMIN_DB_NAME: ${DB_NAME:-postfix}
-      POSTFIXADMIN_DB_PASSWORD: ${DB_PASSWORD:-postfix}
-      POSTFIXADMIN_SETUP_PASSWORD: ${POSTFIXADMIN_PASSWORD:-postfixadmin}
+      POSTFIXADMIN_DB_USER: ${DB_USER}
+      POSTFIXADMIN_DB_NAME: postfix
+      POSTFIXADMIN_DB_PASSWORD: ${DB_PASSWORD}
+      POSTFIXADMIN_SETUP_PASSWORD: ${POSTFIXADMIN_PASSWORD}
       POSTFIXADMIN_SMTP_SERVER: postfix
       POSTFIXADMIN_SMTP_PORT: 25
     restart: unless-stopped
@@ -55,15 +56,15 @@ services:
     volumes:
       - /etc/dkim/keys:/etc/dkim/keys
     environment:
-      DKIM_DOMAIN: ${HOSTNAME:-mail.phuongmphan.com}
-      DKIM_SELECTOR: ${DKIM_SELECTOR:-papaya}
+      DKIM_DOMAIN: ${HOSTNAME}
+      DKIM_SELECTOR: ${DKIM_SELECTOR}
     restart: unless-stopped
 
 secrets:
   cert_file:
-    file: /etc/letsencrypt/live/mail.phuongmphan.com/fullchain.pem
+    file: /etc/letsencrypt/live/${HOSTNAME}/fullchain.pem
   key_file:
-    file: /etc/letsencrypt/live/mail.phuongmphan.com/privkey.pem
+    file: /etc/letsencrypt/live/${HOSTNAME}/privkey.pem
 
 volumes:
   postgresdata:
