--- a/postfixadmin/apache/apache2.conf
+++ b/postfixadmin/apache/apache2.conf
@@ -62,7 +62,7 @@ Include ports.conf
 </Directory>
 <Directory ${APACHE_DOCUMENT_ROOT}>
 	Options Indexes FollowSymLinks
-	AllowOverride None
+	AllowOverride All
 	Require all granted
 </Directory>
 AccessFileName .htaccess
