--- a/dovecot/etcfs/dovecot/conf.d/10-mail.conf
+++ b/dovecot/etcfs/dovecot/conf.d/10-mail.conf
@@ -1,5 +1,5 @@
-mail_location = maildir:/home/vmail/%d/%u
-mail_home = /var/vmail/mailboxes/%d/%n
+mail_home = /var/vmail/%d/%n
+mail_location = maildir:~/vmail
 
 namespace inbox {
     inbox = yes
