--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,12 @@ on:
     tags: [v*]
 
 jobs:
-  build-postfix:
+  build-and-push:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
+      #if: ${{ github.event_name == 'push' }}
+    strategy:
+      matrix:
+        image: ['postfix', 'opendkim', 'dovecot', 'postfixadmin']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -23,53 +26,40 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: pmphan/mailserver-postfix
+          images: pmphan/mailserver-${{ matrix.image }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: postfix
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-  build-opendkim:
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Log into DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Extract Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: pmphan/mailserver-opendkim
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: opendkim
+          context: ${{ matrix.image }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
-    needs: [build-postfix, build-opendkim]
+    needs: [build-and-push]
     if: |
       always() &&
-      (needs.build-postfix.result == 'success' || needs.build-postfix.result == 'skipped')  &&
-      (needs.build-opendkim.result == 'success' || needs.build-opendkim.result == 'skipped') 
+      (needs.build-and-push.result == 'success' || needs.build-and-push.result == 'skipped')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+
+      - name: Populate docker-compose with ENV
+        uses: danielr1996/envsubst-action@1.1.0
+        env:
+          HOSTNAME: ${{ vars.MAILSERVER_HOST }}
+          RELAY_HOST: ${{ vars.RELAY_HOST }}
+          RELAY_USER: ${{ secrets.RELAY_USER }}
+          RELAY_PASSWORD: ${{ secrets.RELAY_PASSWORD }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTFIXADMIN_PASSWORD: ${{ secrets.POSTFIXADMIN_PASSWORD }}
+          DKIM_SELECTOR: ${{ vars.DKIM_SELECTOR }}
+        with:
+          input: docker-compose.yml
+          output: docker-compose.yml
 
       - name: SCP docker-compose
         uses: appleboy/scp-action@v0.1.4
