[chore] Add restart policy to compose file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       POSTGRES_DB: postfix
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    restart: unless-stopped
 
   postfix:
     image: pmphan/mailserver-postfix:latest
